@@ -1,3 +1,8 @@
+2002-01-28  Andrew Cagney  <ac131313@redhat.com>
+
+	* gdbint.texinfo (Target Architecture Definition): Delete
+	description of TARGET_BYTE_ORDER_DEFAULT.
+
 2002-01-27  Eli Zaretskii  <eliz@is.elta.co.il>
 
 	* gdb.texinfo: Fix typos and markup.  From Dmitry Sivachenko
